force-app/main/default/objects/sumoapp__BatchProcessItem__c/sumoapp__BatchProcessItem__c.object-meta.xml
<CustomObject>
    <label>SUMO Batch Process Item</label>
    <nameField>
        <displayFormat>BPI-{000000}</displayFormat>
        <label>Batch Process Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SUMO Batch Process Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>