force-app/main/default/objects/sumoapp__BatchProcessItem__c/fields/sumoapp__ClassName__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__ClassName__c</fullName>
    <label>Batch Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>