force-app/main/default/objects/sumoapp__BatchProcessItem__c/fields/sumoapp__RecordIds__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__RecordIds__c</fullName>
    <label>Record Ids</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>