force-app/main/default/objects/sumoapp__BatchProcessItem__c/listViews/allSelection_BatchProcessItem.listView-meta.xml
<ListView>
    <fullName>allSelection_BatchProcessItem</fullName>
    <filterScope>Queue</filterScope>
    <label>allSelection</label>
    <queue>allSelection</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>